5.0a2 -> 5.0a3:
    - jbj: parse arbitrary tags permitted by _arbitrary_tags white list.
    - jbj: fix: renumber rpmParseState_e to avoid rpmRC error returns.
    - rpm.org: remove unnecessary includes.
    - jbj: stub in arbitrary tag methods.
    - jbj: fix: ditto, for *.src.rpm as well.
    - jbj: fix: RPMTAG_BUILDTIME is type RPM_UINT32_TYPE, not RPM_STRING_TYPE.
    - jbj: fix: getBuildTime returns uint32_t *, not uint32_t.
    - jbj: rpmbuild: more memory leak plugging.
    - jbj: rpmbuild: plug some memory leaks.
    - jbj: fix: return 0, not -1, with unsigned changes as error.
    - jbj: add HEADERGET_NOEXTENSION disabler, kill off headerGetEntry.
    - jbj: 1 down, 2 to go, to get rid of headerGetEntry.
    - jbj: limit headerGetEntry usage to -lrpmdb only.
    - jbj: Eliminate header.h and hdrinline.h.
    - jbj: insure that HE_t in headerGet/headerNext is initialized sanely.
    - jbj: python: lose rpmMergeHeaderFoo methods.
    - jbj: eliminate headerFreeData, w00t!, just free all tag data.
    - jbj: finalize headerInit/headerNext/headerFini, add to the ABI.
    - jbj: include <header.h> only where needed, doco remaining destruction.
    - jbj: finalize headerMod, add to the ABI, remove HME_t goop.
    - jbj: finalize headerDel, add to the ABI, remove HRE_t goop.
    - jbj: finalize headerPut, add to the ABI, remove HAE_t goop.
    - jbj: finalize headerGet, add to the ABI, remove HGE_t goop.
    - jbj: re-add headerSprintf to the ABI, removing wrappers/methods.
    - jbj: move headerSprintf goop out of header.c into hdrfmt.c.
    - jbj: python: hmmm, add header extensions to dictionary correctly.
    - jbj: terminate on headerTagTable sentinel, don't use rpmTagTableSize.
    - jbj: use NULL default, not rpmTagTable, arg to headerSprintf everywhere.
    - jbj: hdrfmt.c: relocate (and extend) rpmDisplayQueryTags.
    - jbj: add tag{Clean,Name,Value,Type} methods to librpmdb.
    - jbj: lose header.h in favor of rpmtag.h several places.